fixed spacing
and added one button

--- a/style.css
+++ b/style.css
@@ -392,6 +392,7 @@ span {
   display: inline-flex; /*this puts the images on the same line*/
   background-position: center;
   background-size: cover;
+  padding: 0.75rem 0.5rem 0rem;
 }
 
 .customer-loop h3 {
